welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:3: error: illegal start of simple expression
	if(indexOfValue(nums ,valu))){
                                    ^